--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
   <script src="app.js"></script>
   <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDoYISVblufYSzI0no4WIpkN5QHLSCwJgU&callback=initMap">
   </script>
 </body>
 </html>
