--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,12 @@
   </style>
 <head>
 <body>
+  <div>
+    <label for="raddressInput">Search location:</label>
+    <input type="text" id="addressInput" size="55"/>
+    <input type="button" id="searchButton" value="Search"/>
+  </div>
+  <div><select id="locationSelect" style="width: 10%; visibility: hidden"></select></div>
   <div class="map"></div>
 
   <script src="app.js"></script>
