Got the list working

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <input type="text" id="addressInput" size="55"/>
     <input type="button" id="searchButton" value="Search"/>
   </div>
-  <div><select id="locationSelect" style="width: 10%; visibility: hidden"></select></div>
+  <div><select id="locationSelect" style="width: 300px; visibility: hidden"></select></div>
   <div class="map"></div>
 
   <script src="app.js"></script>
