--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
   <div><select id="locationSelect" style="width: 300px; visibility: hidden"></select></div>
   <div class="map"></div>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="app.js"></script>
-  <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDoYISVblufYSzI0no4WIpkN5QHLSCwJgU&callback=initMap">
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDoYISVblufYSzI0no4WIpkN5QHLSCwJgU&callback=initMap">
   </script>
 </body>
 </html>
